feat(bindgen): consume ADR-006-hoisted `world embedder` + cross-JVM determinism
The `wasmos:host/embedder@0.1.0` world was restructured to hoist its
types (`error-code`, `error`, `import-satisfaction`) and resources
(`host-provider`, `runtime-instance`) directly onto `world embedder`,
removing the empty `embedder-api` carrier interface. Two gaps surfaced:

1. `WitWorldPreprocessor` stripped `world { ... }` blocks entirely, so
   the hoisted types never reached the generator — output was one file
   (`EmbedderCallbacks`) instead of six. Now the preprocessor projects
   worlds as `Interface` entries with `isWorld() == true`, strips
   `import`/`export`/`use` clauses from the body, and reuses the
   existing resource-body extraction. `CodeGenerator` routes world
   projections to top-level `BindgenModel` types instead of building
   an empty Java interface carrier.

2. Byte-identical CLI reruns diverged: HashMap/Map.copyOf iteration is
   randomized per JVM. Switched every downstream-iterated collection
   (parseTypes, parseFunctions, parseRecordType, parseVariantType,
   WitInterfaceDefinitionImpl, RecordTypeKind, VariantTypeKind,
   CodeGenerator.convertedTypes) to LinkedHashMap so declaration order
   flows end-to-end.

Generated surface after the change (6 files, all javac-clean):
EmbedderCallbacks, Error, ErrorCode, HostProvider, ImportSatisfaction,
RuntimeInstance. `WasmosEmbedderShapeTest` updated to drop the
`EmbedderApi` assertion and to negatively assert no empty carrier is
generated. Bindgen suite still 472/472 green.